<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="eu.mcomputing.mobv.zadanie.viewmodels.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <eu.mcomputing.mobv.zadanie.widgets.BottomBar
            android:id="@+id/bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/profileTitle"
            android:text="@string/profile"
            style="@style/TitleStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/load_profile_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_profile"
            android:layout_marginStart="16dp"
            app:cornerRadius="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/logout_btn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cornerRadius="14dp" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="96dp"
            android:text="@{model.userResult.username}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="152dp"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/userPhoto"
            android:layout_width="140dp"
            android:layout_height="123dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/baseline_perm_contact_calendar_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/profile_image_description" />

        <TextView
            android:id="@+id/location_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="220dp"
            android:layout_marginTop="20dp"
            android:text="@string/share_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userPhoto" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/changePasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/change_password"
            app:cornerRadius="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/location_label"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toTopOf="@+id/location_label"
            app:layout_constraintVertical_bias="0.3" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/location_switch"
            android:layout_width="52dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/location_switch_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.396"
            app:layout_constraintStart_toEndOf="@+id/location_label"
            app:layout_constraintTop_toBottomOf="@+id/userPhoto" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/timeHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="40dp"
            android:hint="@string/sharing_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTimeHour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/timeMinute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/sharing_end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeHour">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTimeMinute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.mapbox.maps.MapView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="52dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:mapbox_cameraTargetLat="40.7128"
            app:mapbox_cameraTargetLng="-74.0060"
            app:mapbox_cameraZoom="9.0">

        </com.mapbox.maps.MapView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/startRecording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:text="@string/confirm_sharing"
            app:cornerRadius="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeHour" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>