<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/map"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="13dp"
        android:src="@drawable/baseline_map_24"
        app:layout_constraintEnd_toStartOf="@id/feed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/navigation_map"
        />

    <ImageView
        android:id="@+id/feed"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="13dp"
        android:src="@drawable/baseline_feed_24"
        app:layout_constraintEnd_toStartOf="@id/profile"
        app:layout_constraintStart_toEndOf="@id/map"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/navigation_feed" />

    <ImageView
        android:id="@+id/profile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="13dp"
        android:src="@drawable/baseline_account_box_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/feed"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/navigation_profile" />

</androidx.constraintlayout.widget.ConstraintLayout>