<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <eu.mcomputing.mobv.zadanie.widgets.BottomBar
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/profileTitle"
        android:text="@string/profile"
        style="@style/TitleStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="176dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:text="@string/username"
        app:layout_constraintEnd_toStartOf="@+id/userPhoto"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/userPhoto" />

    <TextView
        android:id="@+id/email"
        android:layout_width="176dp"
        android:layout_height="45dp"
        android:layout_marginEnd="28dp"
        android:text="@string/email"
        app:layout_constraintBottom_toBottomOf="@+id/userPhoto"
        app:layout_constraintEnd_toStartOf="@+id/userPhoto"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/userPhoto"
        android:layout_width="140dp"
        android:layout_height="123dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/profile_image_description"
        android:src="@drawable/baseline_perm_contact_calendar_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.mapbox.maps.MapView
        android:layout_width="match_parent"
        android:layout_height="326dp"
        android:layout_marginBottom="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>